removed scrollbar and other fixes

--- a/dev/client/src/pages/Home.css
+++ b/dev/client/src/pages/Home.css
@@ -1,9 +1,10 @@
 .Home {
   text-align: center;
   background-color: #310B0B;
-  min-height: 100vh;
   display: flex;
+  height: 100vh;
   align-items: center;
   flex-direction: column;
+
 }
 
